# mu3eanca

./: .gitignore  .gitmodules  README.md  ul.cshrc
PSI-PetaByteArchive/2021/: metadata.json
PSI-PetaByteArchive/2022/: metadata.json
PSI-PetaByteArchive/2023/: metadata.json
PSI-PetaByteArchive/2024/: metadata.json
PSI-PetaByteArchive/2025/: README  metadata-005.json  metadata-006b.json  metadata-009.json
PSI-PetaByteArchive/testbeam/: metadata-2019.json
ana/: Makefile  README  anaNoiseMaskFiles.cc  getAPeak.C  hitDataBase.cc  hitDataBase.hh  hitDataNoise.cc  hitDataNoise.hh  hitDataPixel.cc  hitDataPixel.hh  pixelHistograms.cc  pixelHistograms.hh  plotHitDataPixel.cc  plotHitDataPixel.hh  plotResults.cc  plotResults.hh  runHitDataAna.cc  runPixelHistograms.cc  runPlot.cc  runSkimMu3e.cc  runTreeReader.cc  runTreeReader01.cc  sensor.hh  skimMu3e.cc  skimMu3e.hh  test1.cc  trBase.cc  trBase.hh  trGen.cc  trGen.hh  trIncludes.hh  trRec.cc  trRec.hh  treeReader01.cc  treeReader01.hh
ana/chains/: mu3ebechains
ana/legacy/: hitDataNoise.hh  hitDataPixel.cc  skimMu3e.cc
cal/ladderTests/: Makefile  anaEnsemble.cc  anaEnsemble.hh  anaLadder.cc  anaLadder.hh  ladderTests.C  plotEnsemble.cc  plotEnsemble.hh  runAnaLadder.cc
code/p0000/: Mu3eExperimentConstruction.cpp  Mu3eFibreDetector.h  Mu3eFibreMppcSD.cpp  Mu3eFibreRibbon.h  Mu3eFibreSmbMuTrigSD.cpp  Mu3eFibreSmbMuTrigSD.h  Mu3eFibreSmbSD.cpp  Mu3eFibreSmbSD.h  Mu3eFibreSupport.cpp  Mu3eFibreSupport.h  Mu3eRunAction.cpp  Mu3eTileSD.cpp  cpBack  detector.json  detectorvis.json  mu3eVis.cpp  run1.mac  setup.csh  simvis.json  vis.mac  visdetector.json
code/p0001/: CMakeLists.txt  Mu3eDetectorCfg.h  Mu3eExperimentConstruction.cpp  Mu3eFibreSmbMuTrigSD.cpp  Mu3eFibreSmbMuTrigSD.h  Mu3eFibreSmbSD.cpp  Mu3eFibreSmbSD.h  Mu3eFibreSupport.cpp  Mu3eFibreSupport.h  Mu3eFibreTrackerConstruction.cpp  Mu3eRunAction.cpp  cpBack  digivis.json  run1.mac  setup.csh
code/p0002/: Mu3eFibreDetector.h  Mu3eFibreRibbon.cpp  cpBack
code/p0003/: Mu3eFibreSmbMuTrigSD.cpp  Mu3eFibreSmbMuTrigSD.h  Mu3eFibreSupport.cpp  cpBack  detector.json  run1.mac
code/p0004/: README
code/p0005/: CMakeLists.txt  FbDet.cpp  SiDet.cpp  TlDet.cpp  cpBack  run1.mac  trirec.cpp
code/p0006/: CMakeLists.txt  Conf.cpp  Mu3eCalFactory.cc  Mu3eCalFactory.hh  Mu3eConditions.hh  Readme.md  SiDet.cpp  TlDet.cpp  calMppcAlignment.cc  calPixelAlignment.cc  calPixelAlignment.hh  cdbJSON.cc  cdbPrintPayload.cpp  cdbRest.cc  cpBack  dumpAlignmentTreesToCsv.C  payload.cc  root.hpp  sensors-mcidealhead.csv  trirec.cpp  trirec.h
code/p0006/conddb/: CMakeLists.txt
code/p0007/: cpBack
code/p0007/conddb/: CMakeLists.txt
code/p0007/conddb/ascii/: mppcs-mcidealv5.0.csv
code/p0007/conddb/src/: Mu3eConditions.cc  calAbs.cc  calAbs.hh  calFibreAlignment.hh  calMppcAlignment.hh  calPixelQualityM.hh  calPixelQualityV.cc  cdbAbs.hh
code/p0007/conddb/test/: CMakeLists.txt  cdbInitDB.cpp
common/: sensors_mapping_220525.json  sensors_mapping_220531.json
db0/: test0.cc
db0/ascii/: chipids-intrun  pixelcablingmap-intrun.json  sensors-full-1.csv  sensors-intrun-online.json  sensors-intrun.csv
db0/cdb/: CdbClassFactory.cc  CdbClassFactory.hh  Makefile  README  calAbs.cc  calAbs.hh  calPixel.cc  calPixel.hh  calPixelAlignment.cc  calPixelAlignment.hh  cdb.cc  cdb.hh  cdbAscii.cc  cdbAscii.hh  cdbJSON.cc  cdbJSON.hh  cdbMongo.cc  cdbMongo.hh  cdbRest.cc  cdbRest.hh  fillDB.cc  main.cc  payload.cc  payload.hh  testCDB.cc  testRun.cc
db0/cdb0/: CdbClassFactory.hh  Makefile  README.md  calAbs.hh  calPixel.cc  calPixelAlignment.cc  calPixelAlignment.hh  cdb.hh  cdbAscii.cc  cdbMongo.cc  fillDB.cc  payload.hh  sensors-intrun.csv  serializePixelAlignment.cc  testRun.cc
db0/cdb1/: Makefile  Mu3eConditions.cc  Mu3eConditions.hh  README.md  base64.cpp  base64.h  calAbs.cc  calAbs.hh  calFibreAlignment.cc  calFibreAlignment.hh  calFibresAlignment.cc  calFibresAlignment.hh  calMppcAlignment.cc  calMppcAlignment.hh  calPixelAlignment.cc  calPixelAlignment.hh  calPixelCablingMap.cc  calPixelCablingMap.hh  (+30 more)
db1/: README.md  read.js
db2/: README.md  create_ssl_cert.sh  db.js  nginx-proxy-common.conf  nginx.conf  package.json  test1.js
mac/: README.md  vis-fibres-target-supportrod.mac
mdc/analyzer/: CMakeLists.txt
mdc/analyzer/analyzer/: AnaFillHits.h  CMakeLists.txt  HitVectorFlowEvent.h  hits.h  root_helpers.h
mdc2023/: 230712-ic
mdc2023/analyzer/analyzer/: AnaPixelHistos.cpp  AnaPixelHistos.h  CMakeLists.txt  HitVectorFlowEvent.cpp  analyzer.cpp  cntEvents.cpp
mu3e-cdb-python/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
mu3e-cdb-python/mu3e_cdb/: conditions.py  factory.py
mu3e-cdb-python/mu3e_cdb/calibrations/: CalFibreAlignment.py  CalPixelQualityLM.py  CalTileAlignment.py  __init__.py  base.py
mu3e-cdb-python/mu3e_cdb/database/: __init__.py  base.py  rest_db.py
mu3e-cdb-python/mu3e_cdb/models/: __init__.py  payload.py  run_record.py
mu3e-cdb-python/mu3e_cdb/utils/: base64.py  blob.py
mysql/: test0.cc
others/: Distributions.cpp
perl/: calcSHA256  cpFilesFromGitDir  doForRunList  getFiles  getSignificantRuns  grid2Merlin  pixelNoiseMaskFiles  portionRunList  purgeIOV  relinkBinFiles  setup-merlin6.csh  setup-merlin7.csh  updateMerlin.csh  updateNoiseMaskRepo  updateRunDB
qnd/: addHist2RootFile.C  anaHitData.C  anaNoiseMaskFiles.C  anaPDB.C  anaSkippedHeader.C  chipID.C  dumpFibresToBLOB.C  dumpJson2Root.C  dumpMppcsToBLOB.C  dumpSensorsToBLOB.C  dumpSensorsToCSV.C  dumpTilesToBLOB.C  dumpTree.C  effAsymmetry.C  fibres.C  ladderTests.C  noisyPixels.C  pixelEff.C  plotCablesCSV.C  plotFibresG4.C  plotTiming.C  plotWget.C  potiMeasurements.C  printPhiFromCSV.C  printSensors.C  r2m.C  removeNoisyPixels.C  test.C  toyData.C  ts.C
run2025/: 250617.txt  250621.txt  metadata-003.json  metadata-004.json  metadata-006.json  metadata.json  processed.runs  setup.csh
slurm/: g4bl-runAllTransport  g4bl-runTransport  g4bl-runTransportScan  mkTarFile  monSlurm  replicate  rline  run  slurm-g4bl-pioneer.csh  slurm-midas_meta.csh  slurm-mu3eSim.csh
(+530 files in other folders)
